// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component on Stack 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item"
    >
      Basic content
    </div>
  </span>
</DocumentFragment>
`;

exports[`component on StackItem 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack"
  >
    <span
      class="pf-v6-l-stack__item"
    >
      Basic content
    </span>
  </div>
</DocumentFragment>
`;

exports[`gutter 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack pf-m-gutter"
  >
    <div
      class="pf-v6-l-stack__item"
    >
      Basic content
    </div>
  </div>
</DocumentFragment>
`;

exports[`isFilled defaults to false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item"
    >
      Basic content
    </div>
  </div>
</DocumentFragment>
`;

exports[`isFilled set to true 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item pf-m-fill"
    >
      Filled content
    </div>
  </div>
</DocumentFragment>
`;
